@@ -3,8 +3,8 @@ package com.perfulandia.Perfulandia.controller;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import com.perfulandia.Perfulandia.model.orden;
-import com.perfulandia.Perfulandia.service.ordenService;
+import com.perfulandia.Perfulandia.model.*;
+import com.perfulandia.Perfulandia.service.OrdenService;
 
 import java.util.List;
 
@@ -12,13 +12,13 @@ import java.util.List;
 @RequestMapping("/api/perfulandia")
 public class ordenController {
     @Autowired
-    private ordenService ordenService;
+    private OrdenService ordenService;
 
     // listar todo
     @GetMapping("/orden")
-    public ResponseEntity<List<orden>> getAllOrden() {
+    public ResponseEntity<List<Orden>> getAllOrden() {
         try {
-            List<orden> ordenes = ordenService.getAllOrdenes();
+            List<Orden> ordenes = ordenService.getAllOrdenes();
             return ResponseEntity.ok(ordenes);
         } catch (Exception e) {
             return ResponseEntity.internalServerError().build();
@@ -27,9 +27,9 @@ public class ordenController {
 
     // listar por id
     @GetMapping("/orden/{id}")
-    public ResponseEntity<orden> getOrdenById(@PathVariable Long id) {
+    public ResponseEntity<Orden> getOrdenById(@PathVariable Long id) {
         try {
-            orden ordenEncontrada = ordenService.getOrdenById(id);
+            Orden ordenEncontrada = ordenService.getOrdenById(id);
             if (ordenEncontrada != null) {
                 return ResponseEntity.ok(ordenEncontrada);
             } else {
@@ -42,9 +42,9 @@ public class ordenController {
 
     // listar por id de usuario
     @GetMapping("/orden/usuario/{usuarioId}")
-    public ResponseEntity<List<orden>> getOrdenByUsuarioId(@PathVariable Long usuarioId) {
+    public ResponseEntity<List<Orden>> getOrdenByUsuarioId(@PathVariable Long usuarioId) {
         try {
-            List<orden> ordenes = ordenService.getOrdenByUsuarioId(usuarioId);
+            List<Orden> ordenes = ordenService.getOrdenByUsuarioId(usuarioId);
             return ResponseEntity.ok(ordenes);
         } catch (Exception e) {
             return ResponseEntity.internalServerError().build();
@@ -53,9 +53,9 @@ public class ordenController {
 
     // listar por id de carrito
     @GetMapping("/orden/carrito/{carritoId}")
-    public ResponseEntity<List<orden>> getOrdenByCarritoId(@PathVariable Long carritoId) {
+    public ResponseEntity<List<Orden>> getOrdenByCarritoId(@PathVariable Long carritoId) {
         try {
-            List<orden> ordenes = ordenService.getOrdenByCarritoId(carritoId);
+            List<Orden> ordenes = ordenService.getOrdenByCarritoId(carritoId);
             return ResponseEntity.ok(ordenes);
         } catch (Exception e) {
             return ResponseEntity.internalServerError().build();
@@ -64,7 +64,7 @@ public class ordenController {
 
     // crear orden
     @PostMapping("/orden")
-    public ResponseEntity<orden> createOrden(@RequestBody orden nuevaOrden) {
+    public ResponseEntity<Orden> createOrden(@RequestBody Orden nuevaOrden) {
         try {
             if (nuevaOrden == null) {
                 return ResponseEntity.badRequest().body(null);
@@ -73,7 +73,7 @@ public class ordenController {
             if (nuevaOrden.getUsuario() == null || nuevaOrden.getCarrito() == null) {
                 return ResponseEntity.badRequest().body(null);
             }
-            orden creada = ordenService.saveOrden(nuevaOrden);
+            Orden creada = ordenService.saveOrden(nuevaOrden);
             return ResponseEntity.ok(creada);
         } catch (Exception e) {
             return ResponseEntity.status(500).body(null);
@@ -82,20 +82,20 @@ public class ordenController {
 
     // crear varios ordenes
     @PostMapping("/orden/batch")
-    public ResponseEntity<List<orden>> createOrdenes(@RequestBody List<orden> nuevasOrdenes) {
+    public ResponseEntity<List<Orden>> createOrdenes(@RequestBody List<Orden> nuevasOrdenes) {
         try {
             if (nuevasOrdenes == null || nuevasOrdenes.isEmpty()) {
                 return ResponseEntity.badRequest().body(null);
             }
             // Validar cada orden
-            for (orden o : nuevasOrdenes) {
+            for (Orden o : nuevasOrdenes) {
                 if (o.getUsuario() == null || o.getCarrito() == null) {
                     return ResponseEntity.badRequest().body(null);
                 }
             }
-            List<orden> creadas = nuevasOrdenes.stream()
+            List<Orden> creadas = nuevasOrdenes.stream()
                     .map(ordenService::saveOrden)
-                    .toList();
+                    .collect(java.util.stream.Collectors.toList());
             return ResponseEntity.ok(creadas);
         } catch (Exception e) {
             return ResponseEntity.status(500).body(null);
@@ -106,7 +106,7 @@ public class ordenController {
     @DeleteMapping("/orden/{id}")
     public ResponseEntity<Void> deleteOrden(@PathVariable Long id) {
         try {
-            orden ordenExistente = ordenService.getOrdenById(id);
+            Orden ordenExistente = ordenService.getOrdenById(id);
             if (ordenExistente != null) {
                 ordenService.deleteOrden(id);
                 return ResponseEntity.noContent().build();
@@ -131,16 +131,16 @@ public class ordenController {
 
     // actualizar orden por id
     @PutMapping("/orden/{id}")
-    public ResponseEntity<orden> updateOrden(@PathVariable Long id, @RequestBody orden ordenActualizada) {
+    public ResponseEntity<orden> updateOrden(@PathVariable Long id, @RequestBody Orden ordenActualizada) {
         try {
-            orden ordenExistente = ordenService.getOrdenById(id);
+            Orden ordenExistente = ordenService.getOrdenById(id);
             if (ordenExistente != null) {
                 ordenExistente.setEstado(ordenActualizada.getEstado());
                 ordenExistente.setDireccionEnvio(ordenActualizada.getDireccionEnvio());
                 ordenExistente.setCarrito(ordenActualizada.getCarrito());
                 ordenExistente.setUsuario(ordenActualizada.getUsuario());
                 ordenExistente.setDetalles(ordenActualizada.getDetalles());
-                return ResponseEntity.ok(ordenService.updateOrden(ordenExistente));
+                return ResponseEntity.ok(OrdenService.updateOrden(ordenExistente));
             } else {
                 return ResponseEntity.notFound().build();
             }
